--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pikud-haoref-api",
+  "name": "pikud-haoref-api-graphql",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
