Added CF worker

--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "pikud-haoref-api-graphql",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "graphql-yoga-cloudflare-workers",
+  "description": "Fully-featured, simple to set up, performant and extendable GraphQL server",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts",
-    "start": "ts-node src/main.ts",
+    "start": "wrangler dev",
+    "check": "tsc --pretty --noEmit",
     "generate": "graphql-codegen"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "engines": {
+    "node": ">=16"
+  },
+  "dependencies": {
+    "@graphql-tools/schema": "^10.0.3",
+    "graphql": "^16.8.1",
+    "graphql-yoga": "5.2.0"
+  },
   "devDependencies": {
+    "@types/service-worker-mock": "2.0.1",
+    "service-worker-mock": "2.0.5",
+    "wrangler": "3.39.0",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
-    "@types/node": "20.11.30",
     "cross-env": "7.0.3",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "typescript": "5.4.3"
-  },
-  "dependencies": {
-    "@graphql-tools/schema": "^10.0.3",
-    "@types/node-fetch": "^2.6.11",
-    "graphql": "^16.8.1",
-    "graphql-yoga": "5.2.0"
   }
 }
