--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "wrangler dev",
     "check": "tsc --pretty --noEmit",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "prettier": "prettier --cache --write --list-different --ignore-unknown \"**/*\""
   },
   "engines": {
     "node": ">=16"
@@ -19,13 +20,14 @@
   "devDependencies": {
     "@types/service-worker-mock": "2.0.1",
     "service-worker-mock": "2.0.5",
-    "wrangler": "3.39.0",
+    "wrangler": "^2.1.12",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
     "cross-env": "7.0.3",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
-    "typescript": "5.4.3"
+    "typescript": "5.4.3",
+    "prettier": "3.2.5"
   }
 }
