--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
   "dependencies": {
     "@graphql-tools/schema": "^10.0.3",
     "graphql": "^16.8.1",
+    "graphql-scalars": "^1.23.0",
     "graphql-yoga": "5.2.0"
   },
   "devDependencies": {
-    "@types/service-worker-mock": "2.0.1",
-    "service-worker-mock": "2.0.5",
-    "wrangler": "^2.1.12",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
+    "@types/service-worker-mock": "2.0.1",
     "cross-env": "7.0.3",
+    "prettier": "3.2.5",
+    "service-worker-mock": "2.0.5",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "typescript": "5.4.3",
-    "prettier": "3.2.5"
+    "wrangler": "^2.1.12"
   }
 }
