--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "typescript": "5.4.3",
-    "wrangler": "^2.1.12"
+    "wrangler": "3.41.0"
   }
 }
