--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
 	},
 	"dependencies": {
 		"@graphql-tools/schema": "10.0.3",
+		"@types/uuid": "^9.0.8",
 		"graphql": "16.8.1",
 		"graphql-scalars": "1.23.0",
-		"graphql-yoga": "5.2.0"
+		"graphql-yoga": "5.2.0",
+		"uuid": "9.0.1"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.1.0",
 		"@cloudflare/workers-types": "^4.20240320.1",
-		"typescript": "^5.0.4",
-		"prettier": "3.2.5",
-		"vitest": "1.3.0",
-		"wrangler": "^3.0.0",
 		"@graphql-codegen/cli": "5.0.2",
 		"@graphql-codegen/typescript": "4.0.6",
-		"@graphql-codegen/typescript-resolvers": "4.0.6"
+		"@graphql-codegen/typescript-resolvers": "4.0.6",
+		"prettier": "3.2.5",
+		"typescript": "^5.0.4",
+		"vitest": "1.3.0",
+		"wrangler": "^3.0.0"
 	}
 }
