--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@graphql-tools/schema": "10.0.3",
+		"@graphql-yoga/plugin-response-cache": "^3.5.0",
 		"@types/uuid": "^9.0.8",
 		"graphql": "16.8.1",
 		"graphql-scalars": "1.23.0",
